k8s/deploy-api.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: api-gateway
  labels:
    app: spring-petclinic
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: spring-petclinic
        tier: api-gateway
    spec:
      containers:
        - image: hongjs/spring-petclinic-api-gateway:latest
          imagePullPolicy: Always
          name: api-gateway
          ports:
            - containerPort: 8080
