k8s/deploy-vets.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: vets
  labels:
    app: spring-petclinic
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: spring-petclinic
        tier: vets
    spec:
      containers:
        - image: hongjs/spring-petclinic-vets-service:latest
          imagePullPolicy: Always
          name: vets
          ports:
            - containerPort: 8080
