k8s/deploy-visits.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: visits
  labels:
    app: spring-petclinic
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: spring-petclinic
        tier: visits
    spec:
      containers:
        - image: hongjs/spring-petclinic-visits-service:latest
          imagePullPolicy: Always
          name: visits
          ports:
            - containerPort: 8080
