k8s/customers.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: customers
  labels:
    app: spring-petclinic
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: spring-petclinic
        tier: customers
    spec:
      containers:
        - image: hongjs/spring-petclinic-customers-service:latest
          imagePullPolicy: Always
          name: customers
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: customers-service
  labels:
    app: spring-petclinic
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
      nodePort: 32003
  selector:
    app: spring-petclinic
    tier: customers
