k8s/svc-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  labels:
    app: spring-petclinic
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
      nodePort: 32005
  selector:
    app: spring-petclinic
    tier: api-gateway
