k8s/svc-customers.yaml
apiVersion: v1
kind: Service
metadata:
  name: customers-service
  labels:
    app: spring-petclinic
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
      nodePort: 32003
  selector:
    app: spring-petclinic
    tier: customers
