k8s/svc-vets.yaml
apiVersion: v1
kind: Service
metadata:
  name: vets-service
  labels:
    app: spring-petclinic
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
      nodePort: 32001
  selector:
    app: spring-petclinic
    tier: vets
