k8s/svc-visits.yaml
apiVersion: v1
kind: Service
metadata:
  name: visits-service
  labels:
    app: spring-petclinic
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
      nodePort: 32004
  selector:
    app: spring-petclinic
    tier: visits
