k8s/svc-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-web
  labels:
    app: spring-petclinic
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
      nodePort: 32006
  selector:
    app: spring-petclinic
    tier: api-gateway
