k8s/vets-service.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: vets
  labels:
    app: spring-petclinic
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: spring-petclinic
        tier: vets
    spec:
      containers:
        - image: hongjs/spring-petclinic-vets-service:latest
          imagePullPolicy: Always
          name: vets
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: vets-service
  labels:
    app: spring-petclinic
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
      nodePort: 32005
  selector:
    app: spring-petclinic
    tier: vets
