k8s/ingress-api.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: api
spec:
  rules:
  - host:
    http:
      paths:
      - path: /api/gateway/
        backend:
          serviceName: api-gateway
          servicePort: 80
