k8s/ingress-customers.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: customers
spec:
  rules:
  - host:
    http:
      paths:
      - path: /api/customer/
        backend:
          serviceName: customers-service
          servicePort: 80
