k8s/ingress-nginx.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-ingress-nginx
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: api-gateway
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: services-ingress-nginx
spec:
  rules:
  - http:
      paths:
      - path: /api/vet/
        backend:
          serviceName: vets-service
          servicePort: 80
      - path: /api/visit/
        backend:
          serviceName: visits-service
          servicePort: 80
      - path: /api/customer/
        backend:
          serviceName: customers-service
          servicePort: 80
      - path: /api/gateway/
        backend:
          serviceName: api-gateway
          servicePort: 80
