k8s/ingress-vets.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: vets
spec:
  rules:
  - host:
    http:
      paths:
      - path: /api/vet/
        backend:
          serviceName: vets-service
          servicePort: 80
