k8s/ingress-visits.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: visits
spec:
  rules:
  - host:
    http:
      paths:
      - path: /api/visit/
        backend:
          serviceName: visits-service
          servicePort: 80
