k8s/ingress-web.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: web
spec:
  rules:
  - host:
    http:
      paths:
      - path: /
        backend:
          serviceName: api-gateway-web
          servicePort: 80
